chore: #975 Adding a formatter and fixing format mistakes Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>