@@ -40,9 +40,10 @@ import java.util.Iterator;
 import java.util.List;
 
 import static io.github.microcks.util.JsonSchemaValidator.*;
+
 /**
- * Helper class for validating Json objects against their AsyncAPI schema. Supported version
- * of AsyncAPI schema is https://www.asyncapi.com/docs/specifications/2.0.0/.
+ * Helper class for validating Json objects against their AsyncAPI schema. Supported version of AsyncAPI schema is
+ * https://www.asyncapi.com/docs/specifications/2.0.0/.
  * @author laurent
  */
 public class AsyncAPISchemaValidator {
@@ -53,12 +54,10 @@ public class AsyncAPISchemaValidator {
    public static final String ASYNC_SCHEMA_PAYLOAD_ELEMENT = "payload";
 
    private static final String ONE_OF_STRUCT = "oneOf";
-   private static final String[] STRUCTURES = {
-         "allOf", "anyOf", ONE_OF_STRUCT, "not", "items", "additionalProperties"
-   };
-   private static final String[] NOT_SUPPORTED_ATTRIBUTES = {
-         "discriminator", "externalDocs", "deprecated"
-   };
+   private static final String[] STRUCTURES = { "allOf", "anyOf", ONE_OF_STRUCT, "not", "items",
+         "additionalProperties" };
+   private static final String[] NOT_SUPPORTED_ATTRIBUTES = { "discriminator", "externalDocs", "deprecated" };
+
 
    /** Private constructor to hide the implicit one. */
    private AsyncAPISchemaValidator() {
@@ -67,7 +66,7 @@ public class AsyncAPISchemaValidator {
    /**
     * Check if a Json object is valid against the given AsyncAPI schema specification.
     * @param schemaText The AsyncAPI schema specification as a string
-    * @param jsonText The Json object as a string
+    * @param jsonText   The Json object as a string
     * @return True if Json object is valid, false otherwise
     * @throws IOException if string representations cannot be parsed
     */
@@ -81,13 +80,13 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Validate a Json object representing by its text against a schema object representing byt its
-    * text too. Validation is a deep one: its pursue checking children nodes on a failed parent. Validation
-    * is respectful of AsyncAPI schema spec semantics regarding additional or unknown attributes: schema must
-    * explicitely set <code>additionalProperties</code> to false if you want to consider unknown attributes
-    * as validation errors. It returns a list of validation error messages.
+    * Validate a Json object representing by its text against a schema object representing byt its text too. Validation
+    * is a deep one: its pursue checking children nodes on a failed parent. Validation is respectful of AsyncAPI schema
+    * spec semantics regarding additional or unknown attributes: schema must explicitely set
+    * <code>additionalProperties</code> to false if you want to consider unknown attributes as validation errors. It
+    * returns a list of validation error messages.
     * @param schemaText The AsyncAPI schema specification as a string
-    * @param jsonText The Json object as a string
+    * @param jsonText   The Json object as a string
     * @return The list of validation failures. If empty, json object is valid !
     * @throws IOException if json string representations cannot be parsed
     */
@@ -96,13 +95,13 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Validate a Json object representing by its text against a schema object representing byt its
-    * text too. Validation is a deep one: its pursue checking children nodes on a failed parent. Validation
-    * is respectful of AsyncAPI schema spec semantics regarding additional or unknown attributes: schema must
-    * explicitely set <code>additionalProperties</code> to false if you want to consider unknown attributes
-    * as validation errors. It returns a list of validation error messages.
+    * Validate a Json object representing by its text against a schema object representing byt its text too. Validation
+    * is a deep one: its pursue checking children nodes on a failed parent. Validation is respectful of AsyncAPI schema
+    * spec semantics regarding additional or unknown attributes: schema must explicitely set
+    * <code>additionalProperties</code> to false if you want to consider unknown attributes as validation errors. It
+    * returns a list of validation error messages.
     * @param schemaNode The AsyncAPI schema specification as a Jackson node
-    * @param jsonNode The Json object as a Jackson node
+    * @param jsonNode   The Json object as a Jackson node
     * @return The list of validation failures. If empty, json object is valid !
     */
    public static List<String> validateJson(JsonNode schemaNode, JsonNode jsonNode) {
@@ -110,14 +109,14 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Validate a Json object representing by its text against a schema object representing byt its
-    * text too. Validation is a deep one: its pursue checking children nodes on a failed parent. Validation
-    * is respectful of AsyncAPI schema spec semantics regarding additional or unknown attributes: schema must
-    * explicitely set <code>additionalProperties</code> to false if you want to consider unknown attributes
-    * as validation errors. It returns a list of validation error messages.
+    * Validate a Json object representing by its text against a schema object representing byt its text too. Validation
+    * is a deep one: its pursue checking children nodes on a failed parent. Validation is respectful of AsyncAPI schema
+    * spec semantics regarding additional or unknown attributes: schema must explicitely set
+    * <code>additionalProperties</code> to false if you want to consider unknown attributes as validation errors. It
+    * returns a list of validation error messages.
     * @param schemaNode The AsyncAPI schema specification as a Jackson node
-    * @param jsonNode The Json object as a Jackson node
-    * @param namespace Namespace definition to resolve relative dependencies in Json schema
+    * @param jsonNode   The Json object as a Jackson node
+    * @param namespace  Namespace definition to resolve relative dependencies in Json schema
     * @return The list of validation failures. If empty, json object is valid !
     */
    public static List<String> validateJson(JsonNode schemaNode, JsonNode jsonNode, String namespace) {
@@ -135,40 +134,42 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Validate a Json object representing an AsyncAPI message against a node representing
-    * a full AsyncAPI specification (and not just a schema node). Specify the message by providing a valid JSON pointer
-    * for {@code messagePathPointer} to allow finding the correct schema information. Validation is a deep one: its
-    * pursue checking children nodes on a failed parent. Validation is respectful of AsyncAPI schema spec semantics
-    * regarding additional or unknown attributes: schema must explicitly set {@code additionalProperties} to false if
-    * you want to consider unknown attributes as validation errors. It returns a list of validation error messages.
-    * @param specificationNode The AsyncAPI full specification as a Jackson node
-    * @param jsonNode The Json object representing actual message as a Jackson node
+    * Validate a Json object representing an AsyncAPI message against a node representing a full AsyncAPI specification
+    * (and not just a schema node). Specify the message by providing a valid JSON pointer for {@code messagePathPointer}
+    * to allow finding the correct schema information. Validation is a deep one: its pursue checking children nodes on a
+    * failed parent. Validation is respectful of AsyncAPI schema spec semantics regarding additional or unknown
+    * attributes: schema must explicitly set {@code additionalProperties} to false if you want to consider unknown
+    * attributes as validation errors. It returns a list of validation error messages.
+    * @param specificationNode  The AsyncAPI full specification as a Jackson node
+    * @param jsonNode           The Json object representing actual message as a Jackson node
     * @param messagePathPointer A JSON Pointer for accessing expected message definition within spec
     * @return The list of validation failures. If empty, json object is valid !
     */
-   public static List<String> validateJsonMessage(JsonNode specificationNode, JsonNode jsonNode, String messagePathPointer) {
+   public static List<String> validateJsonMessage(JsonNode specificationNode, JsonNode jsonNode,
+         String messagePathPointer) {
       return validateJsonMessage(specificationNode, jsonNode, messagePathPointer, null);
    }
 
    /**
-    * Validate a Json object representing an AsyncAPI message against a node representing
-    * a full AsyncAPI specification (and not just a schema node). Specify the message by providing a valid JSON pointer
-    * for {@code messagePathPointer} to allow finding the correct schema information. Validation is a deep one: its
-    * pursue checking children nodes on a failed parent. Validation is respectful of AsyncAPI schema spec semantics
-    * regarding additional or unknown attributes: schema must explicitly set {@code additionalProperties} to false if
-    * you want to consider unknown attributes as validation errors. It returns a list of validation error messages.
-    * @param specificationNode The AsyncAPI full specification as a Jackson node
-    * @param jsonNode The Json object representing actual message as a Jackson node
+    * Validate a Json object representing an AsyncAPI message against a node representing a full AsyncAPI specification
+    * (and not just a schema node). Specify the message by providing a valid JSON pointer for {@code messagePathPointer}
+    * to allow finding the correct schema information. Validation is a deep one: its pursue checking children nodes on a
+    * failed parent. Validation is respectful of AsyncAPI schema spec semantics regarding additional or unknown
+    * attributes: schema must explicitly set {@code additionalProperties} to false if you want to consider unknown
+    * attributes as validation errors. It returns a list of validation error messages.
+    * @param specificationNode  The AsyncAPI full specification as a Jackson node
+    * @param jsonNode           The Json object representing actual message as a Jackson node
     * @param messagePathPointer A JSON Pointer for accessing expected message definition within spec
-    * @param namespace Namespace definition to resolve relative dependencies in OpenAPI schema
+    * @param namespace          Namespace definition to resolve relative dependencies in OpenAPI schema
     * @return The list of validation failures. If empty, json object is valid !
     */
-   public static List<String> validateJsonMessage(JsonNode specificationNode, JsonNode jsonNode, String messagePathPointer, String namespace) {
+   public static List<String> validateJsonMessage(JsonNode specificationNode, JsonNode jsonNode,
+         String messagePathPointer, String namespace) {
       // Extract specific content type node for message node.
       JsonNode messageNode = specificationNode.at(messagePathPointer);
       if (messageNode == null || messageNode.isMissingNode()) {
          log.debug("messagePathPointer {} is not a valid JSON Pointer", messagePathPointer);
-         return Arrays.asList("messagePathPointer does not represent a valid JSON Pointer in AsyncAPI specification");
+         return List.of("messagePathPointer does not represent a valid JSON Pointer in AsyncAPI specification");
       }
       // Message node can be just a reference.
       messageNode = followRefIfAny(messageNode, specificationNode);
@@ -197,32 +198,32 @@ public class AsyncAPISchemaValidator {
          return Arrays.asList(e.getMessage());
       }
       // Import all the common parts that may be referenced by references.
-      ((ObjectNode) schemaNode).set(JSON_SCHEMA_COMPONENTS_ELEMENT, specificationNode.path(JSON_SCHEMA_COMPONENTS_ELEMENT).deepCopy());
+      ((ObjectNode) schemaNode).set(JSON_SCHEMA_COMPONENTS_ELEMENT,
+            specificationNode.path(JSON_SCHEMA_COMPONENTS_ELEMENT).deepCopy());
 
       return validateJson(schemaNode, jsonNode, namespace);
    }
 
    /**
-    * Validate an Avro binary representing an AsyncAPI message against a node representing
-    * a full AsyncAPI specification (and not just a schema node). Specify the message by providing a valid JSON pointer
-    * for {@code messagePathPointer} within specification to allow finding the correct schema information.
-    * Validation with avro binary is a shallow one: because we do not have the schema used for writing the bytes,
-    * we can only check the given bytes are fitting into the read schema from AsyncAPI document. It returns a
-    * list of validation error messages.
-    * @param specificationNode The AsyncAPI full specification as a Jackson node
-    * @param avroBinary The avro binary representing actual message
+    * Validate an Avro binary representing an AsyncAPI message against a node representing a full AsyncAPI specification
+    * (and not just a schema node). Specify the message by providing a valid JSON pointer for {@code messagePathPointer}
+    * within specification to allow finding the correct schema information. Validation with avro binary is a shallow
+    * one: because we do not have the schema used for writing the bytes, we can only check the given bytes are fitting
+    * into the read schema from AsyncAPI document. It returns a list of validation error messages.
+    * @param specificationNode  The AsyncAPI full specification as a Jackson node
+    * @param avroBinary         The avro binary representing actual message
     * @param messagePathPointer A JSON Pointer for accessing expected message definition within spec
-    * @param schemaMap An optional local Schema registry snapshot for resolving Avro schemas
+    * @param schemaMap          An optional local Schema registry snapshot for resolving Avro schemas
     * @return The list of validation failures. If empty, avro binary is valid !
     */
    public static List<String> validateAvroMessage(JsonNode specificationNode, byte[] avroBinary,
-                                                  String messagePathPointer, SchemaMap schemaMap) {
+         String messagePathPointer, SchemaMap schemaMap) {
       // Retrieve the schemas to validate binary against.
       Schema[] avroSchemas;
       try {
          avroSchemas = retrieveMessageAvroSchemas(specificationNode, messagePathPointer, schemaMap);
       } catch (Exception e) {
-         return Arrays.asList(e.getMessage());
+         return List.of(e.getMessage());
       }
 
       List<String> errors = new ArrayList<>();
@@ -232,7 +233,7 @@ public class AsyncAPISchemaValidator {
             // have the schema used for writing. Just checking we can read with given schema.
             AvroUtil.avroToAvroRecord(avroBinary, avroSchema);
             // We're satisfying at least one schema. Exit here.
-            return Arrays.asList();
+            return List.of();
          } catch (AvroTypeException ate) {
             errors.add("Avro schema cannot be used to read message: " + ate.getMessage());
          } catch (IOException ioe) {
@@ -243,33 +244,32 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Validate an Avro binary representing an AsyncAPI message against a node representing
-    * a full AsyncAPI specification (and not just a schema node). Specify the message by providing a valid JSON pointer
-    * for {@code messagePathPointer} within specification to allow finding the correct schema information.
-    * Validation with avro binary is a deep one: each element of the reading schema from AsyncAPI spec is
-    * checked in terms of type compatibility, name and required/optional property. It returns a
-    * list of validation error messages.
-    * @param specificationNode The AsyncAPI full specification as a Jackson node
-    * @param avroRecord The avro record representing actual message
+    * Validate an Avro binary representing an AsyncAPI message against a node representing a full AsyncAPI specification
+    * (and not just a schema node). Specify the message by providing a valid JSON pointer for {@code messagePathPointer}
+    * within specification to allow finding the correct schema information. Validation with avro binary is a deep one:
+    * each element of the reading schema from AsyncAPI spec is checked in terms of type compatibility, name and
+    * required/optional property. It returns a list of validation error messages.
+    * @param specificationNode  The AsyncAPI full specification as a Jackson node
+    * @param avroRecord         The avro record representing actual message
     * @param messagePathPointer A JSON Pointer for accessing expected message definition within spec
-    * @param schemaMap An optional local Schema registry snapshot for resolving Avro schemas
+    * @param schemaMap          An optional local Schema registry snapshot for resolving Avro schemas
     * @return The list of validation failures. If empty, avro record is valid !
     */
    public static List<String> validateAvroMessage(JsonNode specificationNode, GenericRecord avroRecord,
-                                                  String messagePathPointer, SchemaMap schemaMap) {
+         String messagePathPointer, SchemaMap schemaMap) {
       // Retrieve the schemas to validate record against.
       Schema[] avroSchemas = null;
       try {
          avroSchemas = retrieveMessageAvroSchemas(specificationNode, messagePathPointer, schemaMap);
       } catch (Exception e) {
-         return Arrays.asList(e.getMessage());
+         return List.of(e.getMessage());
       }
 
       // Validation is a deep one. Each element should be checked.
       // We just need to have conformance to one schema among the different ones.
       for (Schema avroSchema : avroSchemas) {
          if (AvroUtil.validate(avroSchema, avroRecord)) {
-            return Arrays.asList();
+            return List.of();
          }
       }
       // Produce some insights on what's going wrong. We'll accumulate the errors on different schemas.
@@ -291,9 +291,8 @@ public class AsyncAPISchemaValidator {
    }
 
    /**
-    * Get a Jackson JsonNode representation for AsyncAPI schema text. This handles
-    * the fact that AsyncAPI spec may be formatted in YAML. In that case, it handles the
-    * conversion.
+    * Get a Jackson JsonNode representation for AsyncAPI schema text. This handles the fact that AsyncAPI spec may be
+    * formatted in YAML. In that case, it handles the conversion.
     * @param schemaText The JSON or YAML string for AsyncAPI schema
     * @return The Jackson JsonNode corresponding to AsyncAPI schema string
     * @throws IOException if schema string representation cannot be parsed
@@ -332,14 +331,14 @@ public class AsyncAPISchemaValidator {
    /** Entry point method for converting an AsyncAPI schema node to Json schema. */
    private static JsonNode convertAsyncAPISchemaToJsonSchema(JsonNode jsonNode) {
       // Convert components.
-      if (jsonNode.has("components")){
+      if (jsonNode.has("components")) {
          convertProperties(jsonNode.path("components").path("schemas").elements());
       }
       // Convert schema for all structures.
       for (String structure : STRUCTURES) {
          if (jsonNode.has(structure) && jsonNode.path(structure).isArray()) {
             ArrayNode arrayNode = (ArrayNode) jsonNode.path(structure);
-            for (int i=0; i<arrayNode.size(); i++) {
+            for (int i = 0; i < arrayNode.size(); i++) {
                JsonNode structureNode = arrayNode.get(i);
                structureNode = convertAsyncAPISchemaToJsonSchema(structureNode);
             }
@@ -374,8 +373,7 @@ public class AsyncAPISchemaValidator {
    /** Deal with converting type of a Json node object. */
    private static void convertType(JsonNode node) {
       // Convert nullable in additional type and remove node.
-      if (node.has("type") && !node.path("type").asText().equals("object")
-            &&node.path("nullable").asBoolean()) {
+      if (node.has("type") && !node.path("type").asText().equals("object") && node.path("nullable").asBoolean()) {
          String type = node.path("type").asText();
          ArrayNode typeArray = ((ObjectNode) node).putArray("type");
          typeArray.add(type).add("null");
@@ -383,7 +381,8 @@ public class AsyncAPISchemaValidator {
    }
 
    /** Build a Json schema node for messages expressed as a direct oneOf structure. */
-   private static JsonNode buildOneOfMessageSchemaNode(JsonNode specificationNode, ArrayNode oneOfMessageNode) throws Exception {
+   private static JsonNode buildOneOfMessageSchemaNode(JsonNode specificationNode, ArrayNode oneOfMessageNode)
+         throws Exception {
       // Initialize a oneOf schema with array.
       ObjectMapper mapper = new ObjectMapper();
       ObjectNode schemaNode = mapper.createObjectNode();
@@ -391,7 +390,7 @@ public class AsyncAPISchemaValidator {
       schemaNode.set(ONE_OF_STRUCT, oneOfNode);
 
       // Extract the schema payload for each alternative of the message.
-      for (int i=0; i<oneOfMessageNode.size(); i++) {
+      for (int i = 0; i < oneOfMessageNode.size(); i++) {
          JsonNode altMessageNode = oneOfMessageNode.get(i);
          // Extract the alternative message node.
          altMessageNode = followRefIfAny(altMessageNode, specificationNode);
@@ -402,7 +401,8 @@ public class AsyncAPISchemaValidator {
    }
 
    /** Retrieve the Json schema node corresponding to a single message definition. */
-   private static JsonNode retrieveSingleMessageSchemaNode(JsonNode specificationNode, JsonNode messageNode) throws Exception {
+   private static JsonNode retrieveSingleMessageSchemaNode(JsonNode specificationNode, JsonNode messageNode)
+         throws Exception {
       // Check that message node has a payload attribute.
       if (!messageNode.has(ASYNC_SCHEMA_PAYLOAD_ELEMENT)) {
          log.debug("messageNode {} has no 'payload' attribute", messageNode);
@@ -423,8 +423,8 @@ public class AsyncAPISchemaValidator {
     * Retrieve the Avro schemas corresponding to a message using its JSON pointer in Spec. Complete the
     * {@code schemaMap} if provided. Raise a simple exception with message if problem while navigating the spec.
     */
-   private static Schema[] retrieveMessageAvroSchemas(JsonNode specificationNode,
-                                                   String messagePathPointer, SchemaMap schemaMap) throws Exception {
+   private static Schema[] retrieveMessageAvroSchemas(JsonNode specificationNode, String messagePathPointer,
+         SchemaMap schemaMap) throws Exception {
       // Extract Json node for message pointer.
       JsonNode messageNode = specificationNode.at(messagePathPointer);
       if (messageNode == null || messageNode.isMissingNode()) {
@@ -441,23 +441,24 @@ public class AsyncAPISchemaValidator {
          if (messagesNode.size() > 1) {
             return buildOneOfMessagesAvroSchemas(specificationNode, (ArrayNode) messageNode, schemaMap);
          }
-         return new Schema[]{buildSingleMessageAvroSchema(specificationNode,
-               followRefIfAny(messagesNode.get(0), specificationNode), schemaMap)};
+         return new Schema[] { buildSingleMessageAvroSchema(specificationNode,
+               followRefIfAny(messagesNode.get(0), specificationNode), schemaMap) };
       } else if (messageNode.has(ONE_OF_STRUCT)) {
          ArrayNode oneOfMessageNode = (ArrayNode) messageNode.get(ONE_OF_STRUCT);
          return buildOneOfMessagesAvroSchemas(specificationNode, oneOfMessageNode, schemaMap);
       } else {
-         return new Schema[]{buildSingleMessageAvroSchema(specificationNode, messageNode, schemaMap)};
+         return new Schema[] { buildSingleMessageAvroSchema(specificationNode, messageNode, schemaMap) };
       }
    }
 
    /** Build an array of Avro schemas for messages expressed as a direct oneOf structure. */
-   private static Schema[] buildOneOfMessagesAvroSchemas(JsonNode specificationNode, ArrayNode oneOfMessageNode, SchemaMap schemaMap) throws Exception {
+   private static Schema[] buildOneOfMessagesAvroSchemas(JsonNode specificationNode, ArrayNode oneOfMessageNode,
+         SchemaMap schemaMap) throws Exception {
       // Initialize a oneOf schema with array.
       Schema[] schemas = new Schema[oneOfMessageNode.size()];
 
       // Extract the schema payload for each alternative of the message.
-      for (int i=0; i<oneOfMessageNode.size(); i++) {
+      for (int i = 0; i < oneOfMessageNode.size(); i++) {
          JsonNode altMessageNode = oneOfMessageNode.get(i);
          // Extract the
          altMessageNode = followRefIfAny(altMessageNode, specificationNode);
@@ -467,7 +468,8 @@ public class AsyncAPISchemaValidator {
    }
 
    /** Build an Avro schema for spring message definition. */
-   private static Schema buildSingleMessageAvroSchema(JsonNode specificationNode, JsonNode messageNode, SchemaMap schemaMap) throws Exception {
+   private static Schema buildSingleMessageAvroSchema(JsonNode specificationNode, JsonNode messageNode,
+         SchemaMap schemaMap) throws Exception {
       // Check that message node has a payload attribute.
       if (!messageNode.has(ASYNC_SCHEMA_PAYLOAD_ELEMENT)) {
          log.debug("messageNode {} has no 'payload' attribute", messageNode);
